# hf-npu-binder

./: .gitignore  README.md  pyproject.toml
hf_npu_binder/: __init__.py
hf_npu_binder/qwen3_5_moe/: __init__.py  causal_conv1d.py  chunk_gated_delta_rule.py  experts.py  fused_recurrent_gated_delta_rule.py
hf_npu_binder/qwen3_5_moe/kernels/: .gitkeep  __init__.py  chunk_delta_h.py  chunk_o.py
hf_npu_binder/shared/: __init__.py  gmm.py
tests/: test_kernels.py  test_kernels_on_npu.py
